@@ -49,7 +49,6 @@
 #include <qore/QoreURL.h>
 #include <qore/QoreFile.h>
 #include <qore/QoreDir.h>
-#include <qore/QoreSocket.h>
 #include <qore/AbstractPrivateData.h>
 #include <qore/QoreObject.h>
 #include <qore/QoreNamespace.h>
