@@ -8,6 +8,8 @@
 	  options and build to "qore -V"
 	* fixed stack guard for linux x86_64
 	* added test/stack-test.q to test stack guard
+	* removed need for openssl headers to be available when including
+	  <qore/Qore.h>
 
 2008.09.11: David Nichols
 	* enabled atomic operations on SPARC with gcc
